# carnot-task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scratch.txt  validation.md
config/: demo.yaml
data/: baseline_story.jsonl  baseline_story.labels.json  week_story_1000.jsonl  week_story_1000.labels.json
docs/: calibration-playbook.md  demo-runbook.md  interview-walkthrough.md  scoring-math.md
reports/: api_logs.txt  calibration-report.json  calibration-report.md  judge_log.txt  ollama_log.txt  reranker_log.txt
scripts/: evaluate.py  evaluate_hybrid.py  generate_week_story.py
specs/recent-event-clustering-demo/: blueprint.md  design.md  requirements.md  research.md  tasks.md  validation.md
sql/: init.sql
src/demo/: __init__.py  cli.py  config.py
src/demo/api/: main.py
src/demo/calibration/: threshold_calibrator.py
src/demo/dashboard/: live_dashboard.py
src/demo/domain/: models.py  scoring.py  text_utils.py
src/demo/embeddings/: model_cache.py
src/demo/intelligence/: __init__.py  judge.py  reranker.py
src/demo/repositories/: cluster_repository.py  database.py  event_repository.py  runtime_state_repository.py
src/demo/services/: clustering_service.py  gate_logic.py  reset_service.py
src/demo/workers/: maintenance.py
tests/: test_calibration.py  test_config.py  test_embeddings.py  test_intelligence.py  test_live_dashboard.py  test_scoring.py  test_story_rebase.py
