[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recent-event-clustering-demo"
version = "0.1.0"
description = "Distributable recent-event clustering interview demo"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "sentence-transformers==3.0.1",
]

[project.scripts]
demo = "demo.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
